--- a/.pipelines/diabetes_regression-ci.yml
+++ b/.pipelines/diabetes_regression-ci.yml
@@ -80,13 +80,21 @@ stages:
     variables:
       AMLPIPELINE_ID: $[ dependencies.Get_Pipeline_ID.outputs['getpipelineid.AMLPIPELINEID'] ]
     steps:
-    - task: ms-air-aiagility.vss-services-azureml.azureml-restApi-task.MLPublishedPipelineRestAPITask@0
-      displayName: 'Invoke ML pipeline'
+    - task: AzureCLI@1
       inputs:
         azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
-        PipelineId: '$(AMLPIPELINE_ID)'
-        ExperimentName: '$(EXPERIMENT_NAME)'
-        PipelineParameters: '"ParameterAssignments": {"model_name": "$(MODEL_NAME)"}, "tags": {"BuildId": "$(Build.BuildId)", "BuildUri": "$(BUILD_URI)"}, "StepTags": {"BuildId": "$(Build.BuildId)", "BuildUri": "$(BUILD_URI)"}'
+        scriptLocation: inlineScript
+        workingDirectory: $(Build.SourcesDirectory)
+        inlineScript: |
+          set -e # fail on error
+          az extension add -n azure-cli-ml
+          RUN_ID_TEMP=$(az ml run submit-pipeline --experiment-name $(EXPERIMENT_NAME) --pipeline-id $(AMLPIPELINE_ID) --resource-group $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) --parameters model_name="$(MODEL_NAME)")
+          RUN_ID_FIRST_LINE=$(echo "$RUN_ID_TEMP" | head -n 1)
+          RUN_ID=$(echo "$RUN_ID_FIRST_LINE" | awk '{print $3}')
+          echo "RUN_ID          ::: $RUN_ID"
+          az ml run update --run $RUN_ID --experiment-name  $(EXPERIMENT_NAME) --resource-group $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) --add-tag BuildId="$(Build.BuildId)"                 
+      displayName: 'Invoke ML pipeline'  
+    
   - job: "Training_Run_Report"
     dependsOn: "Run_ML_Pipeline"
     condition: always()
